Add third level menu

--- a/src/themes/default.scss
+++ b/src/themes/default.scss
@@ -2,8 +2,20 @@
  *  This css theme is optional and should not be included in
  *  your page unless you want a very similar look like in our demo
  */
-
+@import "layout";
 .aria-menu {
+
+  // The root menu should be a horizontal menu
+  @include aria-menu-horizontal-menu();
+
+  // Sub menus should be vertical
+  ul {
+    @include aria-menu-vertical-menu();
+  }
+
+  // Add the default css fallback
+  @include aria-menu-css-fallback();
+
   /* Top level nav */
   float: left;
   margin: 20px 0;
