--- a/src/themes/responsive.scss
+++ b/src/themes/responsive.scss
@@ -1,83 +1,12 @@
 /*
- *  This css theme is optional and should not be included in
- *  your page unless you want a very similar look like in our demo
+ *  This is an example how you might structure the css for a responsive
+ *  design. It's recommended to use only the layout part and do the theming
+ *  on your own.
+ *
+ *  See src/themes/_layout.scss
  */
 @import "layout";
-
-@mixin aria-menu-first-level() {
-  /* Top level nav */
-  float: left;
-  background: #DDD;
-  background-image: -webkit-gradient(linear, left top, left bottom, from(#DDD), to(#999));
-  background-image: -moz-linear-gradient(top, #DDD, #999);
-
-  -webkit-box-shadow: 0 2px 2px rgba(0, 0, 0, 0.1);
-  -moz-box-shadow: 0 2px 2px rgba(0, 0, 0, 0.1);
-  box-shadow: 0 2px 2px rgba(0, 0, 0, 0.1);
-
-  li {
-    > a {
-      /* Top level nav items */
-      padding: 0.8em 1em;
-      border-left: 1px solid rgba(255, 255, 255, 0.4);
-      border-right: 1px solid rgba(0, 0, 0, 0.2);
-      color: #333;
-      font-weight: bold;
-      text-shadow: 0 1px 0 rgba(255, 255, 255, 0.4), 0 -1px 0 rgba(0, 0, 0, 0.2);
-      text-decoration: none;
-    }
-    &:first-child a {
-      border-left: 0px none transparent;
-    }
-    &:last-child a {
-      border-right: 0px none transparent;
-    }
-  }
-
-  > .menuitem-focus > a {
-    /* Top level hover state, preserve hover state when hovering dropdown  */
-    background: #999;
-    background-image: -webkit-gradient(linear, left top, left bottom, from(#999), to(#DDD));
-    background-image: -moz-linear-gradient(top, #999, #DDD);
-    text-shadow: 0 1px 0 rgba(0, 0, 0, 0.4), 0 -1px 0 rgba(255, 255, 255, 0.2);
-    outline: 0;
-  }
-}
-
-@mixin aria-menu-second-level() {
-  /* Dropdowns */
-  -webkit-transition: 0.1s linear opacity;
-
-  min-width: 150px;
-  background: #333;
-  background: rgba(0, 0, 0, 0.9);
-
-  -webkit-box-shadow: 0 3px 3px rgba(0, 0, 0, 0.5);
-  -moz-box-shadow: 0 3px 3px rgba(0, 0, 0, 0.5);
-  box-shadow: 0 3px 3px rgba(0, 0, 0, 0.5);
-
-  li a {
-    /* Drop down menu item */
-    padding: 0.6em 1em;
-    color: #FFF;
-    font-size: 0.9em;
-    border: 1px solid #222;
-    border-width: 0 0 1px;
-    -webkit-transition: 0.1s linear all;
-    background: transparent;
-    text-decoration: none;
-  }
-
-  // Show menu item
-  .menuitem-focus > a {
-    /* Drop down menu item hover state  */
-    background: #EEE;
-    color: #333;
-    text-shadow: none;
-    outline: 0;
-  }
-
-}
+@import "theme";
 
 .aria-menu {
   @media screen and (max-width: 35em) {
@@ -98,10 +27,6 @@
     // Sub menus should be vertical menus
     ul {
       @include aria-menu-second-level();
-      a[aria-haspopup]:after {
-        content: "\25B6";
-        float: right;
-      }
     }
   }
 
